[package]
name = "tokterm"
version = "0.1.0"
authors = ["Pablo Ordoñez <pabloo84@gmail.com>"]

[dependencies.tokterm_core]
path="src/tokterm_core"
version="0.1.0"


[target.'cfg(windows)'.dependencies]
tokterm_windows = { path = "src/tokterm_windows",  version = "0.1.0" }

[target.'cfg(unix)'.dependencies]
#tokterm_termion = { path = "src/tokterm_termion", version = "0.1.0" }
tokterm_ncurses = { path = "src/tokterm_ncurses", version = "0.1.0" }


