[package]
name = "tokterm"
version = "0.1.0"
authors = ["Pablo Ordoñez <pabloo84@gmail.com>"]

[features]
default = [ "ncurses" ]
windows = []
termion = []
ncurses = []

[dependencies.tokterm_core]
path="src/tokterm_core"
version="0.1.0"

[dependencies]
#tokterm_windows = { path = "src/tokterm_windows", version = "0.1.0" }
#tokterm_termion = { path = "src/tokterm_termion", version = "0.1.0" }
tokterm_ncurses = { path = "src/tokterm_ncurses", version = "0.1.0" }
