[package]
name = "tokterm_windows"
version = "0.1.0"
authors = ["Pablo Ordoñez <pabloo84@gmail.com>"]

[dependencies.tokterm_core]
path="../tokterm_core"
version="0.1.0"

[dependencies.winapi]
version = "0.3.5"
features = ["winnt", "winbase", "winuser", "wincon", "consoleapi", "fileapi", "handleapi", "processenv"]